# guidebook

./: .dockerignore  .gitignore  .woodpecker.yml  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.release  Justfile  README.md  TERMUX.md  build_entry.py  docker-compose.yaml  export-session.py  guidebook.spec  pyproject.toml  rename.py
.claude/skills/issue/: SKILL.md
.claude/skills/release-test/: SKILL.md
.claude/skills/status/: SKILL.md
.github/workflows/: release.yaml
.woodpecker/: docker.yml  release.yml
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: About.svelte  App.svelte  Chat.svelte  DatabasePicker.svelte  LogbookPicker.svelte  Media.svelte  Notifications.svelte  P2P.svelte  Query.svelte  Records.svelte  Scratchpad.svelte  Settings.svelte  Welcome.svelte  p2p.js  storage.js  themes.js
src/guidebook/: _build_info.py  acme.py  chat.py  db.py  main.py  nats_client.py  proxy.py  ratelimit.py  sse.py  tls.py
src/guidebook/routes/: attachments.py  auth.py  chat.py  databases.py  global_settings.py  instance_settings.py  logbooks.py  media.py  mtls.py  nats.py  notifications.py  query.py  records.py  scratchpad.py  settings.py  tls.py  update.py
ssb/: guidebook-ssb  guidebook-ssb.desktop  main.js  package-lock.json  package.json  preload.js
