[project]
name = "guidebook"
version = "0.1.0"
description = "A webapp template with FastAPI, SQLAlchemy, and Svelte"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "aiosqlite",
    "httpx",
    "packaging",
]

[project.scripts]
guidebook = "guidebook.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/guidebook"]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
]
build = [
    "pyinstaller>=6.0",
]

[tool.ruff]
line-length = 88
